# rubicon-rs

./: .gitignore  Cargo.toml  README.md
abi/: ABDKMath64x64.json  Address.json  BathHouse.json  BathPair.json  BathToken.json  Context.json  ERC20.json  IBathToken.json  IERC20.json  LibNote.json  OVMProxy.json  SafeMath.json  SafeMathE.json  TransparentUpgradeableProxy.json  USDCWithFaucet.json  UpgradeableProxy.json  WETH9.json
contracts/rubiconPools/: BathHouse.sol  BathPair.sol
src/: addresses.rs  contracts.rs  currency.rs  etherscan.rs  lib.rs  orders.rs  providers.rs  util.rs
tester/: Cargo.toml
tester/src/: main.rs
