[package]
name = "rubicon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = "0.6.2"
reqwest = "*" # we only need this for one thing, can we pull this lib from on of the other dependencies instead?
anyhow = "1.0.44"
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.68"
